<resources>
    <string name="app_name">VoiceNote</string>

    <string name="start_recording">NAGRAJ</string>
    <string name="stop_recording">STOP</string>
    <string name="save_recording">ZAPISZ</string>
    <string name="delete_recording">SKASUJ</string>
    <string name="list_recording">LISTA</string>

    <string name="author">Autor:</string>
    <string name="title">Tytuł:</string>
    <string name="description">Opis:</string>

    <string name="recording">NOWE NAGRANIE</string>
    <string name="play_selected">START</string>
    <string name="stop_playing">STOP</string>
    <string name="merge_selected">POŁĄCZ</string>
    <string name="delete_selected">USUŃ</string>

</resources>
